infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-news
  labels:
    name: smart-news
    environment: production
